Fix bug with overlapping button

--- a/server/src/main/resources/public/style.css
+++ b/server/src/main/resources/public/style.css
@@ -26,6 +26,11 @@
     font-size: 0.95rem;
 }
 
+.kis-carousel-control {
+    height: 100px;
+    top: 50%;
+}
+
 .list em {
     color: white;
     font-size: 0.95rem;
